# othello

./: CMakeLists.txt  game.cpp  game.h  login.cpp  login.h  main.cpp  result.cpp  result.h
